Fix dot spacing

--- a/src/assets/styles/pages/AboutPage.scss
+++ b/src/assets/styles/pages/AboutPage.scss
@@ -108,7 +108,7 @@
 				width: rem(100px);
 				height: auto;
 				border-radius: 50%;
-				margin: 0 10px;
+				margin: 0 rem(16px);
 				// object-fit: cover;
 			}
 		}
